# Expiry-Alert

./: .env.example  .gitignore  .npmrc  BUILD.md  BUILD_GUIDE.md  CHANGELOG.md  COMPLETION_PLAN.md  CONTRIBUTING.md  COPILOT_PROMPT.md  CREDENTIALS.txt  DEBUG_AND_TEST_REPORT.md  DIRECTUS_MIGRATION_NextSession.md  DIRECTUS_MIGRATION_PLAN.md  INSTALLATION_GUIDE.md  LICENSE  MONOREPO.md  PRODUCTION_STATUS.md  README.md  SETUP_CREDENTIALS_GUIDE.md  SETUP_WINDOWS.md  SET_DEFAULT_BRANCH.md  START_HERE.md  SUMMARY.txt  docker-compose.yml  package-lock.json  package.json
.cursor/rules/: 000-overview.md  010-code-style-js.md  020-ui-react-scss-a11y.md  030-rtl-hebrew.md  040-tables-forms.md  050-api-express.md  060-auth-rbac.md  070-prisma-postgres.md  080-testing-e2e.md  090-git-workflow.md  100-security-secrets.md  110-hostinger-vps-compliance.md  120-skills-index.md
.github/workflows/: build-apk.yml  build.yml
apps/api/: .env.example  Dockerfile  README.md  package.json  update-schema-fetch.mjs
apps/desktop/: build-frontend-only.bat  build.bat  build.sh  index.html  (+2 more)
backups/: pre-notification-redesign-20260308-130332.sql  pre-notification-redesign-20260308-130346.sql
docs/: GOOGLE_OAUTH_PRODUCTION_PREP.md  TEAM_PASSWORD_ACCESS_GUIDE.md
scripts/: cpm.sh
skills/: INDEX-CLAUDE.md  INDEX-GEMINI.md  INDEX.md  README.md  add-api-route.md  add-react-page.md  database-migration.md  deployment.md  getting-started.md  rbac-setup.md  testing.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: db.rs
(+219 files in other folders)
