[package]
name = "reagent-expiry-tracker"
version = "1.0.0"
description = "Desktop app for tracking reagent expiration"
authors = ["Blood Bank Team"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
